k8s/statefulSet.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: aicp-api
spec:
  serviceName: aicp-api
  replicas: 1
  selector:
    matchLabels:
      app: aicp-api
  template:
    metadata:
      labels:
        app: aicp-api
    spec:
      securityContext:
        fsGroup: 1000
        runAsNonRoot: true
        runAsGroup: 1000
        runAsUser: 1000
      containers:
        - name: aicp-api
          image: asia-southeast1-docker.pkg.dev/enspara/aicp/aicp-api:0.1.2
          ports:
            - containerPort: 6002
          volumeMounts:
            # - name: aicp-api-env-file
            #   mountPath: /app/server/.env
            #   subPath: .env
            - name: storage-volume
              mountPath: /app/server/storage
          securityContext:
            allowPrivilegeEscalation: true
            capabilities:
              add:
                - SYS_ADMIN
            runAsNonRoot: true
            runAsGroup: 1000
            runAsUser: 1000
          resources:
            requests:
              memory: 750Mi
              cpu: '1'
            limits:
              memory: 1Gi
              cpu: '2'
      # volumes:
      #   - name: aicp-api-env-file
      #     secret:
      #       secretName: aicp-api-env-file
  volumeClaimTemplates:
    - metadata:
        name: storage-volume
      spec:
        accessModes: ['ReadWriteOnce']
        storageClassName: standard-rwo
        resources:
          requests:
            storage: 5Gi
---
apiVersion: v1
kind: Service
metadata:
  name: aicp-api
spec:
  selector:
    app: aicp-api
  ports:
    - protocol: TCP
      port: 6002
      targetPort: 6002
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aicp-api
  annotations:
    acme.cert-manager.io/http01-edit-in-place: 'true'
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.org/client-max-body-size: '50m'
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - api.aicp.dev.devplus.edu.vn
      secretName: devplus-aicp-dev-tls
  rules:
    - host: api.aicp.dev.devplus.edu.vn
      http:
        paths:
          - backend:
              service:
                name: aicp-api
                port:
                  number: 6002
            path: /
            pathType: Prefix
